--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -10,6 +10,10 @@
 
 /*Mobile*/
 @media (max-width: 740px) {
+
+    .s-col-full{
+        width: 100%;
+    }
     #header{
         overflow: hidden;
     }
@@ -48,25 +52,10 @@
         color: #ffffff;
         padding: 5px 41px;
     }
-    .member-band .mobile-member{
-        width: 100%;
-        margin-top: 30px;
-    }
-    #content .mobile-member .member-img{
+    /*Member band*/
+
+    #content .member-img{
         width: 60%;
     }
 
-    .places-list .mobile-places-list{
-        width: 100%;
-        margin-top: 30px;
-    }
-
-/*    Contact*/
-    .contact-content .mobile-contact{
-        width: 100%;
-    }
-    .contact-form .mobile-form{
-        width: 100%;
-        margin-top: 10px;
-    }
 }
